--- a/src/Components/Assets/Navbar/Navbar.css
+++ b/src/Components/Assets/Navbar/Navbar.css
@@ -481,7 +481,7 @@ body {
   }
 
   .mobile-menu-container {
-    top: 250px;
+    top: 400px;
     width: 100%;
     height: 1600px;
     list-style-type: none;
@@ -537,11 +537,25 @@ body {
   }
 
   .mobile-menu li a {
-    
     display: block;
     padding: 5px;
     text-decoration: none;
     color: black;
+  }
+
+  /* increase the gap between menu links and bottom screen */
+  .mobile-menu li:last-child {
+    margin-bottom: 00px;
+  }
+
+  .powered-by p{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-size: 10px;
+    color: #000000;
+    margin-top: 30px;
+    margin-bottom: 500px;
   }
 
   /* Rotate first and third lines when menu is open */
@@ -565,8 +579,8 @@ body {
   .mobile-menu hr {
     width: 90%;
     margin: 15px;
-    margin-bottom: 40px;
-    margin-top: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
   }
 
   .nav-auth {
@@ -579,7 +593,7 @@ body {
     color: #ffffff;
     border: 1px solid #ffffff6a;
     border-radius: 20px;
-    margin-bottom: 400px;
+    margin-bottom: 0px;
     margin-left: 10px;
     height: 35px;
   }
@@ -601,7 +615,7 @@ body {
   }
 
   .nav-auth-login button {
-    width: 180%;
+    width: 220%;
     margin-left: 10px;
     align-items: left;
     background: rgba(255, 255, 255, 0.334);
@@ -689,7 +703,7 @@ body {
 .sliding-search-bar-container.open {
   z-index: -1;
   opacity: 1;
-  bottom: -70%; /* Move the search bar to the bottom of the viewport */
+  bottom: -60%; /* Move the search bar to the bottom of the viewport */
 }
 
 .sliding-search-bar-container.closed {
@@ -726,4 +740,43 @@ body {
   background-color: rgba(255, 255, 255, 0);
   color: #ffffff;
 }
+}
+
+@media (max-width: 480px) {
+  .navbar {
+    position: relative;
+    top:-55px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    position: fixed;
+    z-index: 1000; /* Ensure the navbar is above the overlay */
+    border-radius: 0 0 25px 25px; /* Rounded corners */
+    border: 0.6px solid rgba(0, 0, 0, 0.203);
+  }
+
+  .nav-top hr {
+    width: 1000px;
+    margin-top: 28px;
+    margin-left: -42px;
+    height: 1px;
+    color: #000;
+    justify-content: center;
+    align-items: center;
+    z-index: 1001;
+  }
+
+  .nav-title h1 {
+    position: relative;
+    display: flex;
+    font-size: 10px; /* Adjust font size as needed */
+    font-weight: 300;
+    color: #000000;
+    bottom: 30px;
+    text-align: center;
+    margin-top: 55px;
+  }
+
 }
