--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -79,7 +79,8 @@
     height: 70px;
     border-radius: 75px;
     margin-top: 60px;
-    background: #ff4141;
+    border: 1px solid rgba(255, 255, 255, 0.336);
+    background: linear-gradient(90deg,#000428,#004e92);
     color: white;
     font-size: 22px;
     font-weight: 500;
@@ -104,8 +105,7 @@
     .hero {
         flex-direction: column;
         height: auto;
-        margin-top: 80px;
-        width:90%;
+        margin-top: 70px;
     }
 
     .hero-left {
@@ -138,8 +138,8 @@
     .hero {
         flex-direction: column;
         height: auto;
-        margin-top: 80px;
-        width: 94%;
+        margin-top: 60px;
+        width: 90%;
     }
 
     .hero-left {
@@ -149,15 +149,14 @@
     }
 
     .hero-left h2 {
-        font-size: 22px;
+        font-size: 18px;
     }
 
     .hero-left h3 {
-        font-size: 60px;
+        font-size: 40px;
     }
 
     .hero-left h4 {
-        margin-top: 20px;
         font-size: 24px;
     }
 
@@ -165,7 +164,6 @@
         width: 200px;
         height: 50px;
         font-size: 15px;
-        margin-bottom: 40px;
     }
 
     .hero-right img {
@@ -177,38 +175,38 @@
 @media (max-width: 480px) {
     .hero {
         flex-direction: column;
-        height: 83vh;
-        margin-top: 35px;
-        width: 98%;
-        padding-top: 20vh;
+        height: auto;
+        margin-top: 0px;
+        width: 90%;
+        padding-top: 12vh;
     }
 
     .hero-left {
         padding-left: 5px;
-        align-items: center;
-        text-align: center;
+        align-items: left;
+        text-align: left;
     }
 
     .hero-left h2 {
-        font-size: 28px;
+        font-size: 16px;
     }
 
     .hero-left h3 {
-        font-size: 50px;
-        
+        font-size: 32px;
     }
 
     .hero-left h4 {
-        margin-top: 8vh;
-        font-size: 30px;
+        font-size: 20px;
     }
 
     .hero-latest-btn {
-        padding-left: 10px;
-        padding-right: 10px;
-        width: 250px;
-        height: 60px;
-        font-size: 20px;
+        scale: 1.2;
+        align-items: left;
+        width: 180px;
+        height: 40px;
+        /* margin-right: 160px; */
+        margin-bottom: 50px;
+        font-size: 13px;
     }
 
     .hero-right img {
