--- a/src/Components/RealatedProducts/RelatedProducts.css
+++ b/src/Components/RealatedProducts/RelatedProducts.css
@@ -74,7 +74,7 @@
 .relatedproducts-item {
     margin-top: -30px;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 30px;
+    gap: 50px;
     scale: 1;
 }
 }
@@ -113,35 +113,50 @@
 /* Small Mobile Version */
 @media (max-width: 480px) {
 
-.relatedproducts{
-    margin-bottom: 80px;
-    align-items: center;
-    /* margin: 0%; */
-    display: flex;
-    
-    /* grid-template-columns: 1fr; */
-}
-.relatedproducts h1 {
-    font-size: 20px;
-    align-items: center;
-}
+    .relatedproducts{
+        position: relative;
+        margin-top: 100px;
+        
+        /* grid-template-columns: 1fr; */
+    }
+    .relatedproducts h1 {
+        position: absolute;
+        font-size: 16px;
+        left: -20px; /* Fixed position */
+        top: -80px; /* Fixed position */
+    }
 
-.relatedproducts h2 {
-    font-size: 28px;
-}
+    .relatedproducts h2 {
+        position: absolute;
+        font-size: 21px;
+        left: -20px; /* Fixed position */
+        top: 0px; /* Fixed position */
+    }
 
-.relatedproducts-item {
-    /* grid-template-columns: 1fr;
-    column-gap: 0px;
-    row-gap: 40px; */
-    /* align-items: center;
-    justify-content: center; */
-    display:flex;
-    flex-direction: column;
-    
-    margin-left: 5%;
-    margin-right: 5%;
-}
+    .relatedproducts-item {
+        gap: 20px; /* Reset gap */
+        width: 125.2%; /* Change width to fit its container */
+        height: auto; /* Change height to auto to fit the content */
+        overflow-x: auto;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        scroll-snap-type: x mandatory;
+        padding-right: 25px;
+        padding-left: 25px;
+        padding-bottom: 50px;
+        align-items: center;
+        padding-top: 10px; /* Add padding to accommodate the fixed-position elements */
+    }
+
+    .relatedproducts-item img{
+        border-radius: 10px;
+    }
+
+    .relatedproducts-item::-webkit-scrollbar {
+        display: none;
+    }
+
 }
 
 /* Small Mobile Version */
