--- a/src/Components/Notification/Notification.css
+++ b/src/Components/Notification/Notification.css
@@ -113,6 +113,14 @@
 @media (max-width: 480px) {
     .notification-container {
         margin: 10px 15px;
+        margin-top: 20px;
+        border: 1px solid #00000089;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.519);
+        border-bottom: none;
+        border-left: none;
+        border-right: none;
+        border-radius: 20px;
+        padding: 10px;
     }
 
     .notification-header {
