--- a/src/Components/ProductDisplay/ProductDisplay.css
+++ b/src/Components/ProductDisplay/ProductDisplay.css
@@ -341,14 +341,28 @@
     .productdisplay-right h1 {
       font-size: 24px;
       margin-top: 0px;
+      margin-bottom: 10px;
     }
     .productdisplay-right-prices {
-      font-size: 18px;
+      font-size: 25px;
       gap: 15px;
     }
     .productdisplay-right-star {
       font-size: 12px;
     }
+
+    .productdisplay-right-star img {
+      scale: 1.3;
+      gap: 5px;
+    }
+
+    .productdisplay-right-color h4 ,.productdisplay-right-size h4{
+        font-size: 15px;
+        font-weight: 600;
+        color: #000000;
+        
+    }
+
     .productdisplay-right-sizes button {
       height: 40px;
       padding: 8px 12px;
@@ -383,7 +397,7 @@
 
     .productdisplay-right-club img{
         height: 50px;
-
+        margin-bottom: -20px;
     }
 
     .availability p{
