--- a/src/Components/UserProfile/UserProfile.css
+++ b/src/Components/UserProfile/UserProfile.css
@@ -261,7 +261,16 @@ body.active-modal {
 /* Mobile view */
 @media (max-width: 480px) {
   .profile {
+      margin-top: 20px;
+      margin-bottom: -30px;
+      border: 1px solid #00000089;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.519);
+      border-bottom: none;
+      border-left: none;
+      border-right: none;
+      border-radius: 20px;
       padding: 10px;
+      height: 600px;
   }
   
   .userAcc-header {
