--- a/src/Components/ProductDisplay/ProductDisplay.css
+++ b/src/Components/ProductDisplay/ProductDisplay.css
@@ -139,6 +139,10 @@
     font-weight: 500;
 }
 
+.sizeguide a{
+    color:#000000;
+}
+
 
 .productdisplay-right-addtoCart button{
     padding: 18px 24px;
