--- a/src/Components/NewCollectionTrue/NewCollectionTrue.css
+++ b/src/Components/NewCollectionTrue/NewCollectionTrue.css
@@ -37,6 +37,7 @@
 
 
 .collections1{
+    padding-left: 30px;
     margin-top: -20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -45,7 +46,7 @@
     justify-items: center;  /* Center items horizontally */
     align-items: center;
     gap: 30px;
-    scale: 1.1;
+    scale: 1;
 
     /*make the items borders round*/
 
