--- a/src/Components/Popular/Popular.css
+++ b/src/Components/Popular/Popular.css
@@ -7,6 +7,7 @@
     /* height: 140vh; */
     margin-left: 10%;
     margin-right: 10%;
+    
 }
 
 .popular h1{
@@ -35,6 +36,7 @@
 
 
 .popular-item{
+    padding-left: 30px;
     margin-top: -20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -43,7 +45,7 @@
     justify-items: center;  /* Center items horizontally */
     align-items: center;
     gap: 30px;
-    scale: 1.1;
+    scale: 1;
 
     /*make the items borders round*/
 
