--- a/src/Components/NewCollection/NewCollections.css
+++ b/src/Components/NewCollection/NewCollections.css
@@ -119,7 +119,7 @@
   text-shadow: 2px 2px 2px #00000085;
   position: absolute;
   bottom: -160px;
-  left: -60px;
+  /* left: -60px; */
   z-index: 2; /* Ensure the content is above the overlay */
 }
 
@@ -148,9 +148,11 @@
 
 .shirt {
   padding: 10px;
+  
   width: 80%;
   margin-bottom: 200px;
   text-align: center;
+  left: 30px;
   border-radius: 10px; /* Optional: round the corners of the details box */
 }
 
@@ -206,6 +208,8 @@
 
   .shirt {
     margin-bottom: 150px;
+    text-align: left;
+    left:40px;
   }
 }
 
@@ -272,7 +276,7 @@
     font-size: 20px;
     position: absolute;
     bottom: 30px;
-    left: 0px;
+    left: 40px;
     z-index: 2; /* Ensure the content is above the overlay */
   }
   
@@ -281,7 +285,9 @@
     text-shadow: 2px 2px 2px #00000085;
     position: absolute;
     bottom: -120px;
-    left: -30px;
+    text-align: left;
+    left: 40px;
+    /* left: -30px; */
     z-index: 2; /* Ensure the content is above the overlay */
   }
   
