--- a/src/Components/ProductDisplay/ProductDisplay.css
+++ b/src/Components/ProductDisplay/ProductDisplay.css
@@ -117,7 +117,7 @@
 }
 .productdisplay-right-sizes{
     display: flex;
-    margin: 30px 0px;
+    margin: 15px 0px;
     gap: 20px;
     margin-top: 15px;
 }
@@ -139,9 +139,6 @@
     font-weight: 500;
 }
 
-.sizeguide {
-    margin-top: -10px;
-}
 .sizeguide a{
     color:#000000;
 }
@@ -259,6 +256,7 @@
 @media (max-width: 1024px) {
     .productdisplay {
         scale: 1;
+        gap: 15px;
     }
 
     .productdisplay-right-description{
