--- a/src/Pages/CSS/Profile.css
+++ b/src/Pages/CSS/Profile.css
@@ -35,6 +35,10 @@
     transition: all 0.3s ease; /* Smooth transition */
 }
 
+.mobile-sidebar {
+    display: none;
+}
+
 .sidebar hr {
     width: 120%;
     margin: 10px 0;
@@ -178,6 +182,10 @@
         margin-right: 5%;
     }
 
+    .mobile-sidebar {
+        display: none;
+    }
+
     .sidebar {
         padding: 30px;
     }
@@ -280,33 +288,39 @@
 @media (max-width: 480px) {
     .profile-container {
         grid-template-columns: 1fr;
-        margin-left: 5%;
-        margin-right: 5%;
+        margin-top: -20px;
+        padding-top: 20px;
+        padding-bottom: 30px;
+        /* margin-left: 5%;
+        margin-right: 5%; */
+        border: 1px solid #00000024;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.519);
+        /* border-bottom: none;
+        border-left: none;
+        border-right: none; */
+        box-shadow: none;
+        height:auto
     }
 
     .sidebar {
-        padding: 10px;
+        border: none;
+        box-shadow: none;
+    }
+
+    .sidebar hr {
+        display: none;
     }
 
     .sidebar ul {
-        font-size: 12px;
-        width: 140px;
+        display: none;
     }
 
     .sidebar li {
-        margin-bottom: 20px;
-        padding: 12px;
-        width: 220px;
-        height: 40px;
-        border-top-left-radius: 40px;
-        border-bottom-left-radius: 40px;
+        display: none;
     }
 
     .sidebar li.active {
-        padding: 12px;
-        width: 220px;
-        height: 40px;
-        border-radius: 40px;
+        display: none;
     }
 
     .tab-content {
@@ -314,10 +328,27 @@
     }
 
     .profile-info {
-        font-size: 14px;
+        display: grid;
+        grid-template-columns: 1fr 4fr;
+        align-items: center;
+        justify-content: center;
+        /* height: 200px; */
+        padding: 20px;
+        font-size: 18px;
+        margin-bottom: -50px;
+    }
+
+    .profile-info p{
+        /* display: flex; */
+        display:grid;
+        justify-content: center;
+        margin-top: 50px;
     }
 
     .profile-info img {
+        align-items: center;
+        justify-content: center;
+        margin-top: 90px;
         width: 80px;
         height: 80px;
     }
@@ -328,6 +359,55 @@
     }
 
     .profile-username {
-        font-size: 12px;
+        font-size: 10px;
+    }
+
+    .mobile-sidebar {
+        display: grid;
+        /* flex-direction: column; */
+        align-items: center;
+        background-color: #fff; /* Change background color as needed */
+        padding: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
+    
+    .mobile-sidebar ul {
+        border: 1px solid #ffffff77;
+        background:linear-gradient(90deg, #002980 0%, #0049BA 100%);
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        border-radius: 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        /* flex-direction: row; */
+        list-style-type: none;
+        padding: 10px  0px;
+        margin: 0;
+        width: 100%;
+        justify-content: space-around; /* Distribute space around the items */
+    }
+    
+    .mobile-sidebar li {
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .mobile-sidebar .icon {
+        width: 34px; /* Adjust width and height as needed */
+        height: 34px;
+        
+        /* border: 1px solid #0000005b;
+        border-radius: 20px;
+        padding: 10px; */
+        margin: 0 10px; /* Adjust spacing between icons */
+    }
+
+    .mobile-sidebar li.active {
+        background-color: #00000030; /* Change background color as needed */
+        border-radius: 10px;
+        transition: background-color 0.3s;
     }
 }
