--- a/src/Components/OrderConfirmation/OrderConfermation.css
+++ b/src/Components/OrderConfirmation/OrderConfermation.css
@@ -1313,6 +1313,12 @@
 
 @media (min-width: 910px) {
 
+    /* .maindiv{
+        margin-left: 10%;
+        margin-right: 10%;
+        
+    } */
+
     .orderconfirmation-itemfield {
         display: flex;
         flex-direction: column;
@@ -1620,21 +1626,21 @@
     }
 }
 
-.orderconfirmation-itemfield {
+.orderconfirmation-itemfield1 {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
     margin-top: 20px;
 }
 
-.orderconfirmation-itemfield p {
+.orderconfirmation-itemfield1 p {
     margin: 0 0 10px;
     font-size: 16px;
     font-weight: bold;
     color: #333;
 }
 
-.orderconfirmation-itemfield input {
+.orderconfirmation-itemfield1 input {
     padding: 10px;
     font-size: 14px;
     border: 1px solid #ccc;
@@ -1643,22 +1649,22 @@
     transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-.orderconfirmation-itemfield input::placeholder {
+.orderconfirmation-itemfield1 input::placeholder {
     color: #aaa;
 }
 
-.orderconfirmation-itemfield input:focus {
+.orderconfirmation-itemfield1 input:focus {
     border-color: #007bff;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
 /* Tablet devices (between 910px and 600px) */
 @media (max-width: 910px) and (min-width: 600px) {
-    .orderconfirmation-itemfield p {
+    .orderconfirmation-itemfield1 p {
         font-size: 14px;
     }
     
-    .orderconfirmation-itemfield input {
+    .orderconfirmation-itemfield1 input {
         padding: 8px;
         font-size: 13px;
     }
@@ -1666,20 +1672,20 @@
 
 /* Mobile devices (below 600px) */
 @media (max-width: 599px) {
-    .orderconfirmation-itemfield {
+    .orderconfirmation-itemfield1 {
         margin-bottom: 15px;
         margin-top: 15px;
         
     }
     
-    .orderconfirmation-itemfield p {
+    .orderconfirmation-itemfield1 p {
         font-size: 18px;
-        margin-left: 210px;
+        /* margin-left: 210px; */
     }
     
-    .orderconfirmation-itemfield input {
+    .orderconfirmation-itemfield1 input {
         /* padding-left: 30px; */
-        margin-left: 230px;
+        /* margin-left: 230px; */
         font-size: 15px;
     }
 }
