--- a/src/Components/HomeAd/HomeAd.css
+++ b/src/Components/HomeAd/HomeAd.css
@@ -1,10 +1,32 @@
 
 .home-ad-below {
-    height: 30vh;
+    height: 20vw;
     padding-left: 10%;
     padding-right: 10%;
-    margin-top: 200px;
+    margin-top: 130px;
     margin-bottom: 100px;
     justify-content: space-between;
     
+}
+
+/* Tablet view */
+@media (max-width: 768px) {
+    .home-ad-below {
+        height: 25vw; 
+        padding-left: 5%; 
+        padding-right: 5%;
+        margin-top: 120px; 
+        margin-bottom: 80px;
+    }
+}
+
+/* Mobile view */
+@media (max-width: 480px) {
+    .home-ad-below {
+        height: 30vw; 
+        padding-left: 2%; 
+        padding-right: 2%;
+        margin-top: 80px; 
+        margin-bottom: 50px;
+    }
 }
