--- a/src/Pages/CSS/Signup.css
+++ b/src/Pages/CSS/Signup.css
@@ -5,7 +5,7 @@
     height: auto;
     background-color: #ffffff;
     font-size: 18px;
-    color: #002980;
+    color: linear-gradient(90deg, #000000 0%, #130F40 100%);
     text-align: center;
   }
   
@@ -37,7 +37,7 @@
     width: 160px;
     height: 40px;
     padding: 10px;
-    background-color: #002980;
+    background: linear-gradient(90deg, #000000 0%, #130F40 100%);
     color: rgb(255, 255, 255);
     border: none;
     border-radius: 25px;
@@ -46,11 +46,11 @@
   }
   
   .signup button:hover {
-    background-color: #0056b3;
+    background-color: #ffffff;
   }
   
   .hello-container {
-    background: linear-gradient(90deg, #002980 0%, #0049BA 100%);
+    background: linear-gradient(90deg, #000000 0%, #130F40 100%);
     color: white;
     display: flex;
     flex-direction: column;
@@ -72,6 +72,6 @@
   
   .switch.signup.button:hover {
     background-color: #f1f1f1;
-    color: #002980;
+    color: #ffffff;
   }
   
