--- a/src/Components/OrderConfirmation/OrderConfermation.css
+++ b/src/Components/OrderConfirmation/OrderConfermation.css
@@ -326,7 +326,8 @@
     }
 
     .orderconfirmation-confirm-btn {
-        background-color: linear-gradient(90deg, #000000 0%, #130F40 100%);
+        /* put a green color to the confirm button */
+        background-color: #30e16b;
         color: #ffffff;
         width: 100%;
         padding: 20px;
@@ -915,7 +916,7 @@
         display: inline-block;
         margin-top: 10px;
         padding: 10px 12px;
-        background: linear-gradient(90deg, #000000 0%, #130F40 100%);;
+        background: linear-gradient(90deg, #000000 0%, #130F40 100%);
         box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(10px);
         border: none;
@@ -1269,7 +1270,7 @@
     }
 
     .confirm button{
-        background: linear-gradient(90deg, #000000 0%, #130F40 100%);
+        background: #30e16b;
         color: white;
         width: 100%;
         padding: 20px;
@@ -1570,7 +1571,7 @@
         }
 
         .confirm button{
-            background: linear-gradient(90deg, #000000 0%, #130F40 100%);
+            background: linear-gradient(90deg, #10D164 0%, #72FFb6 100%);
             color: white;
             width: 100%;
             padding: 20px;
