--- a/src/Components/ProductDisplay/ProductDisplay.css
+++ b/src/Components/ProductDisplay/ProductDisplay.css
@@ -96,7 +96,7 @@
     width: auto;
     padding: 18px 24px;
     background: #fbfbfb;
-    border: 1px solid #b3b3b3;
+    border: 1px solid #6d6d6d;
     border-radius: 3px;
     cursor: pointer;
     border-radius: 10px;
@@ -150,7 +150,7 @@
     width: 100%;
     height: 65px;
     color: #ffffff;
-    background: linear-gradient(90deg, #002980 0%, #0049BA 100%);
+    background: linear-gradient(90deg, #000000 0%, #130F40 100%);
     border: 1px solid #ffffff;
     border-radius: 10px;
     cursor: pointer;
@@ -163,7 +163,7 @@
 
 .productdisplay-right-addtoCart button:active {
     /* Add your styles for the clicked state here */
-    background: linear-gradient(90deg, #0049BA 0%, #002980 100%); /* Reversed gradient */
+    background: linear-gradient(90deg, #000000 0%, #130F40 100%); /* Reversed gradient */
     color: #cccccc; /* Lighter text color */
 }
 
@@ -191,7 +191,7 @@
     /* transform: scale(1.1); */
 }
 .productdisplay-right-sizes button.active{
-    background: linear-gradient(90deg, #002980 0%, #0049BA 100%);
+    background: linear-gradient(90deg, #000000 0%, #130F40 100%);
     border: 1px solid #ffffff;
     color: #ffffff;
     transition: transform 0.3s ease-in-out;
@@ -199,7 +199,7 @@
 }
 
 .productdisplay-right-colors button.active{
-    background: linear-gradient(90deg, #002980 0%, #0049BA 100%);
+    background: linear-gradient(90deg, #000000 0%, #130F40 100%);
     border: 1px solid #ffffff;
     color: #ffffff;
     transition: transform 0.3s ease-in-out;
