--- a/src/Components/ProductDisplay/ProductDisplay.css
+++ b/src/Components/ProductDisplay/ProductDisplay.css
@@ -351,7 +351,7 @@
     }
     .productdisplay-right-prices {
       font-size: 25px;
-      gap: 15px;
+      gap: 25px;
     }
     .productdisplay-right-star {
       font-size: 12px;
@@ -380,11 +380,11 @@
     .productdisplay-right-addtoCart button {
       height: 60px;
     }
-    .productdisplay-right-prices {
+    /* .productdisplay-right-prices {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-    }
+    } */
 
     .productdisplay-right-description{
         text-align: justify;
